--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "antd": "^5.26.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.513.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
