--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-confirm-alert": "^3.0.6",
