--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "antd": "^5.26.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-confirm-alert": "^3.0.6",
